# occupancy_greed

./: CMakeLists.txt  README.md
include/: occupancy_grid.hpp  utils.hpp
src/: main.cpp  occupancy_grid.cpp  utils.cpp
